--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon server",
+		"dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\" ",
+		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
 		"start": "NODE_ENV=production node backend/server.js"
 	},
@@ -18,6 +19,7 @@
 		"mongoose": "^8.5.1"
 	},
 	"devDependencies": {
+		"concurrently": "^9.1.0",
 		"nodemon": "^3.1.4"
 	}
 }
