--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-icons/simple-line-icons": "^1.0.1",
+    "@chakra-icons/typicons": "^1.0.1",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
@@ -22,6 +24,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
+    "sass": "^1.80.6",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
